--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,20 +35,22 @@
                 <div class="card-body p-0">
                     <!-- Nested Row within Card Body -->
                     <div class="row">
-                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                        <div class="col-lg-6">
+<!--                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>-->
+                        <div class="col-lg-12">
                             <div class="p-5">
                                 <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4">로그인</h1>
                                 </div>
                                 <form class="user" action="/loginProc" method="post">
                                     <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">계정</span>
                                         <input type="email" class="form-control form-control-user"
                                                id="email" aria-describedby="emailHelp"
                                                name="email"
                                                placeholder="이메일을 입력하세요">
                                     </div>
                                     <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">비밀번호</span>
                                         <input type="password" class="form-control form-control-user"
                                                id="password" name="password" placeholder="비밀번호를 입력하세요">
                                     </div>
@@ -58,6 +60,8 @@
 <!--                                            <label class="custom-control-label" for="customCheck">아이디 저장</label>-->
 <!--                                        </div>-->
 <!--                                    </div>-->
+                                    <span class="m-0 font-weight-bold text-danger"
+                                        th:if="${error != null}" th:text="${exception}"></span>
                                     <button type="submit" class="btn btn-primary btn-user btn-block">
                                         로그인
                                     </button>
